<resources>
    <string name="download_app_notify_finish_content">版本更新</string>
    <string name="download_app_notify_info_error">下载出错</string>
    <string name="download_app_notify_finish_title">点击安装</string>
    <string name="download_app_notify_title">正在下载…</string>
    <string name="download_app_notify_ticker">版本更新中</string>
    <string name="updatenofiy_new_update">更新了</string>
    <string name="update_notify_zhang">章!</string>
    <string name="update_notify_and">等</string>
    <string name="update_book_count_new">本书更新了</string>
    <string name="text_loading_page">正在加载中...</string>
    <string name="update_new_version_ticker">有新版本:</string>
    <string name="setting">设置</string>
    <string name="local_files">本地文件</string>
    <string name="loading_waiting">等待中...</string>
    <string name="local_book_scan_empty">没有检测到txt文本。</string>
    <string name="local_book_import">已导入</string>
    <string name="wifi_transport_address_empty">未连接WiFi网络</string>
    <string name="wifi_transport_prompt">在PC的浏览器中访问以下地址</string>
    <string name="wifi_transport_message_prompt">请确保你的手机和PC在同一局域网，上传过程中，请勿关闭此页面。</string>
    <string name="search_input_hint">请输入书名、作者进行搜索</string>
    <string name="search_more">"查看更多小说>>"</string>
    <string name="search_keyword_error">"请查看输入文字是否有误"</string>
    <string name="read_delete_bookmark_down">下拉删除书签</string>
    <string name="read_delete_bookmark_up">松手删除书签</string>
    <string name="read_add_bookmark_down">下拉添加书签</string>
    <string name="read_add_bookmark_up">松手添加书签</string>
    <string name="app_name">青果阅读</string>
    <string name="book_shelf">书架</string>
    <string name="mine">我的</string>
    <string name="shelf">书架</string>
    <string name="store">书库</string>
    <string name="selected">精选</string>
    <string name="literature">创作</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="complete">完成</string>
    <string name="confirm">确认</string>
    <string name="slash">/</string>
    <string name="vertical">|</string>
    <string name="word">字</string>
    <string name="write">著</string>
    <string name="update">更新</string>
    <string name="download">下载</string>
    <string name="user_literature">我的作品</string>
    <string name="user_dynamic">我的动态</string>
    <string name="received_book_review">收到的书评</string>
    <string name="received_comment">收到的评论</string>
    <string name="wifi_transmission">Wi-Fi传书</string>
    <string name="wifi_transport">Wi-Fi传书</string>
    <string name="import_local">本地导入</string>
    <string name="download_manager">下载管理</string>
    <string name="push_updates">推送更新</string>
    <string name="feedback">意见反馈</string>
    <string name="check_update">检查更新</string>
    <string name="to_score">去评分</string>
    <string name="about_us">关于我们</string>
    <string name="agreement">使用协议</string>
    <string name="copyright_notice">版权声明</string>
    <string name="version">V1.0.0</string>
    <string name="company_email">邮箱 : 2676026122@qq.com</string>
    <string name="company_chart_account_number">微信公众帐号 : 青果阅读</string>
    <string name="agreement_content">
        <b><font size="13">青果阅读使用协议</font></b>\n\n
        <font size="13">青果阅读使用协议（以下简称“本协议”）是趣读趣写科技发展有限公司（以下简称“趣读趣写”）与您就“青果阅读”软件（以下简称“青果”）的安装及使用等相关事项所订立的有效合约。您通过点击确认本协议或以其他方式选择接受本协议，即表示您已与趣读趣写达成协议并同意接受本协议的全部如下约定内容。</font>\n\n
        <b><font size="13">一、</font></b>\n\n
        <font size="13">您充分理解并确认，在接受本协议之前，您已经仔细阅读本协议的全部内容。如您不同意接受本协议的任意内容，或者无法准确理解相关条款含义的，请不要进行后续操作。否则您一旦安装、复制、下载、访问或以其它方式使用青果阅读产品，将视为对本协议的接受。</font>\n\n
        <b><font size="13">二、知识产权</font></b>\n\n
        <font size="13">1、青果阅读的著作权人，青果阅读的一切知识产权，以及与青果阅读相关的所有信息内容，包括但不限于文字表述及其组合、图标、图饰、图像、图表、色彩、界面设计、版面框架、有关数据、附加程序、印刷材料或电子文档等均为趣读趣写所有，受著作权法和国际著作权条约以及其他知识产权法律法规的保护。未经趣读趣写许可，任何人不得对青果阅读进行反向工程（reverse engineer）、反向编译（decompile）或反汇编（disassemble）等侵犯趣读趣写权利的行为。\n\n
        2、青果阅读提供的网络服务中包含的任何文本、图片、图形资料均受版权、商标和/或其它财产所有权法律的保护，未经相关权利人同意，上述资料均不得在任何媒体直接或间接发布、播放、出于播放或发布目的而改写或再发行，或者被用于其他任何商业目的。所有这些资料或资料的任何部分仅可作为私人和非商业用途而保存在用户终端内。趣读趣写不就由上述资料产生或在传送或递交全部或部分上述资料过程中产生的延误、不准确、错误和遗漏或从中产生或由此产生的任何损害赔偿，以任何形式，向用户或任何第三方负责。\n\n
        3、青果阅读提供的书籍内容仅代表作者自己的立场和观点，与趣读趣写无关，由作者本人承担一切法律责任。</font>\n\n
        <b><font size="13">三、您的权利和义务</font></b>\n\n
        <font size="13">1、您保证：您通过青果阅读所从事的一切活动都是合法、真实的，不侵害任何第三方的合法权益。\n\n
        2、您保证您在使用青果阅读的过程中，不会通过恶意删除、修改、增加软件功能或软件中所存储的数据信息，或者故意避开、破坏趣读趣写为保护青果阅读著作权而采取的技术措施，否则因此导致的所有风险与责任均由您自行承担。同时您在此承诺，不会利用青果阅读从事任何非法的或违反本协议的目的的行为，否则趣读趣写有权立即终止向您提供本服务，并保留通过司法途径向您追责的权利。\n\n
        3、您保证不得基于商业目的模仿趣读趣写的产品和服务；不得复制和模仿趣读趣写的设计理念、界面、功能和图表；不得未经趣读趣写许可基于此软件或其内容进行修改或制造派生其他产品。\n\n
        4、您不得利用本软件或本软件服务制作、上载、复制、发送、分享违反国家规定的内容。\n\n
        5、如您违反本协议规定的任何条款，给趣读趣写或其他用户造成损失，您必须承担全部的赔偿责任。如趣读趣写承担了上述责任，则您同意赔偿趣读趣写的相关支出和损失，包括合理的律师费用。\n\n
        6、您同意如您违反本协议规定的任何条款或趣读趣写的各项规则、通告，趣读趣写有权单方判断立即终止您使用青果阅读，而无需事先通知并不退还已收取的任何费用。\n\n
        7、你同意在使用青果阅读的同时，同意接受趣读趣写提供的各类信息服务。</font>\n\n
        <b><font size="13">四、趣读趣写的权利与义务</font></b>\n\n
        <font size="13">1、趣读趣写基于青果阅读实际运营及网络环境的需要，保留随时对青果阅读的进行修改和升级的权利。\n\n
        2、您在使用青果阅读的过程中，违反本协议规定，对趣读趣写公司造成损害的。趣读趣写有权采取包括但不限于中断使用许可、停止提供服务、限制使用、法律追究等措施。\n\n
        3、趣读趣写没有义务对您使用青果阅读的行为进行监督。但是，趣读趣写保留权利在任何时候、无需给予通知并可以凭借任何理由终止您使用青果阅读。</font>\n\n
        <b><font size="13">五、免责及责任的限制</font></b>\n\n
        <font size="13">您理解并同意，青果阅读因下列状况无法正常运作时，趣读趣写不承担损害赔偿责任，该状况包括但不限于：\n\n
        1、因台风、地震、海啸、洪水、停电、战争、恐怖袭击等不可抗力之因素，造成本公司系统障碍不能执行业务的。\n\n
        2、由于黑客攻击、电信部门技术调整或故障、网站升级、银行方面的问题等原因而造成的服务中断或者延迟。\n\n
        3、趣读趣写不保证青果阅读在操作上不会中断或没有错误，不保证趣读趣写会纠正青果阅读的所有缺陷，亦不保证青果阅读能满足您的所有要求。\n\n
        4、如果您对青果阅读的任何部分或本协议条款的任何部分不满意，您唯一的和全部的解决方案就是停止继续使用青果阅读。</font>\n\n
        <b><font size="13">六、</font></b>\n\n
        <font size="13">您同意，本协议适用中华人民共和国大陆地区法律。因趣读趣写与您就本协议的签订、履行或解释发生争议，双方应努力友好协商解决。如协商不成，趣读趣写和您同意由趣读趣写住所地法院管辖审理双方的纠纷或争议。</font>\n\n
        <b><font size="13">七、</font></b>\n\n
        <font size="13">如果本协议中的任何条款无论因何种原因完全或部分无效或不具有执行力，或违反任何适用的法律，则该条款被视为删除，但本协议的其余条款仍应有效并且有约束力。感谢您使用趣读趣写青果阅读阅读软件，任何时候如果您对我们的声明内容有疑问。\n请联系我们的电子邮箱：official@qingoo.cn‍。</font>
    </string>
    <string name="copyright_notice_content">
        <font size="13">青果阅读软件作为原创作品的上传空间网络服务提供者，一贯高度重视知识产权保护并遵守中华人民共和国各项知识产权法律法规和具有约束力的规范性文件，坚信著作权拥有者的合法权益应该得到尊重和依法保护，坚决反对任何违反中华人民共和国相关著作权法律法规的行为。</font>
        <font size="13">本软件仅为用户提供上传空间服务供公众分享文学作品等，请各位用户务必上传自己的原创作品，切勿侵犯他人的知识产权及相关权利。本软件对用户上传内容不做任何形式的修改或编辑，一切法律责任由上传人承担。如果阁下是某一作品的著作权人和/或依法可以行使信息网络传播权的权利人，且您认为本软件上用户上传内容侵犯了您对该等作品的信息网络传播权，请阁下务必书面通知本公司，阁下应对书面通知陈述之真实性负责。本软件一经发现并证实相关侵权事实，会立即移除并停止继续传播任何盗版、非法转载以及其他侵权作品。</font>\n\n
        <font size="13">为提高本软件工作效率，及时停止发布侵权作品，我们制定了旨在保护知识产权权利人合法权益的措施和步骤。您必须提供以下资料：</font>\n\n
        <b><font size="13">一、权利人的姓名（名称）、联系方式、营业执照（单位）和身份证（个人）地址</font></b>\n\n
        <font size="13">本处所称的“权利人”，指拥有合法权益的权利所有人或经权利所有人合法授权的代理人，包括自然人、法人或其他组织等。如您系维权代理人，还需提供相关授权证明等文件。</font>\n\n
        <b><font size="13">二、要求删除或者断开链接的侵权作品的名称和网络地址 </font></b>\n\n
        <font size="13">为便于准确定位侵权作品，提高处理效率，您须提供：侵权作品在本软件上的准确位置、搜索关键词、搜索结果页面截图、侵权链接等。</font>\n\n
        <b><font size="13">三、构成侵权的初步证明材料</font></b>\n\n
        <font size="13">您须提供权利人拥有权利的权属证明材料，包括但不限于有权机构颁发的证书、授权书、合同、被投诉内容构成对权利人的商标、名誉等合法权益侵犯的有效证明等。</font>\n\n
        <b><font size="13">四、权利人保证</font></b>\n\n
        <font size="13">您应当书面保证：您的权利通知和提供的相关材料皆是真实、有效和合法的。如本软件根据您的投诉而删除或者断开有关侵权服务的链接或相关内容，给本软件和被投诉方造成任何损失的，应由您承担责任。</font>\n\n
        <b><font size="13">五、其他材料</font></b>\n\n
        <font size="13"> 如您已经就被投诉内容向相关政府部门或法院提起行政投诉或诉讼的，请在提交通知书时，将相关受理证明及提交政府部门或法院的证据材料一同提交给本软件，这将有利于您的投诉尽快处理。</font>\n\n
        <font size="13"> 以上材料均应经过权利人签署，如您为个人，需亲笔签字；如您为法人或其他组织，需加盖公章。请您将上述材料的扫描件发送至邮箱：official@qingoo.cn‍。如不符合上述条件，我们会请阁下补充提供相应信息，且暂不采取包括删除等相应措施。</font>\n\n
        <font size="13"> 在本软件上传作品的用户视为同意本软件上述及已采用的相应规则措施，本软件不因此而承担任何违约责任或其他任何法律责任，包括不承担因侵权指控不成立而给原上传用户带来损害的赔偿责任。本软件在收到上述通知后会通知上传该等作品的用户，对于多次上传涉嫌侵权作品的用户，我们将取消其用户资格。</font>\n\n
    </string>
    <string name="login">登录</string>
    <string name="login_weixin">微信登录</string>
    <string name="login_qq">QQ登录</string>
    <string name="input_telephone_number">输入手机号</string>
    <string name="input_qq">请输入新QQ号</string>
    <string name="input_password">请输入6~18位密码</string>
    <string name="input_fresh_password">请输入6~18位新密码</string>
    <string name="input_ancient_password">输入旧密码</string>
    <string name="register_immediately">立即注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="other_landing_method">其他登录方式</string>
    <string name="verification_code">验证码</string>
    <string name="obtain_verification_code">获取验证码</string>
    <string name="next_step">下一步</string>
    <string name="input_nickname">请输入昵称（必填，限制字数10个或10个以内）</string>
    <string name="avatar_photo_gallery">图片库选择</string>
    <string name="avatar_camera">摄像头拍摄</string>
    <string name="avatar">头像</string>
    <string name="pen_name">昵称</string>
    <string name="telephone_number">手机号</string>
    <string name="qq_number">QQ号</string>
    <string name="login_binding_prompt">绑定手机号，保障账号安全</string>
    <string name="login_binding_qq_prompt">绑定QQ号，实时与编辑沟通</string>
    <string name="revise_password">修改密码</string>
    <string name="exit_login">退出登录</string>
    <string name="check_pen_name">"请查看昵称是否有误"</string>
    <string name="literature_title_hint">书名（20字以内）</string>
    <string name="literature_title_limit">20</string>
    <string name="literature_description_hint">书籍简介（20~500字）</string>
    <string name="literature_description_limit">500</string>
    <string name="literature_attribute_serialize">连载</string>
    <string name="literature_attribute_finish">完结</string>
    <string name="literature_attribute">作品状态：</string>
    <string name="literature_type">作品类型：</string>
    <string name="literature_style">作品风格：</string>
    <string name="literature_end">结局类型：</string>
    <string name="literature_create_section">写新章节</string>
    <string name="literature_section_manager">章节管理</string>
    <string name="literature_revise">修改作品信息</string>
    <string name="literature_revise_name_limit">不可修改</string>
    <string name="chapter_title">章节标题</string>
    <string name="chapter_content">章节内容</string>
    <string name="publish">发布</string>
    <string name="save_draft">存为草稿</string>
    <string name="save">保存</string>
    <string name="draft_list">草稿列表</string>
    <string name="draft_empty">还没有草稿哦</string>
    <string name="draft_box">草稿箱</string>
    <string name="create">创建</string>
    <string name="literature_information_lost">作品信息丢失，暂时无法编辑，请退出重试！</string>
    <string name="default_name">正义的秘密</string>
    <string name="default_message">有人说过,衡量一个作家是否优秀,就看他能不能担负起社会责任.东野吾做到了.</string>
    <string name="catalog">目录</string>
    <string name="bookmark">书签</string>
    <string name="literature_recommend">"- 为你推荐 -"</string>
    <string name="send">发送</string>
    <string name="search_history">历史搜索</string>
    <string name="comment">评论</string>
    <string name="write_comment">写评论</string>
    <string name="read_more">阅读更多</string>
    <string name="comment_spread">展开全部讨论</string>
    <string name="comment_empty_prompt">暂无评论，快来抢沙发</string>
    <string name="comment_details_empty_prompt">好遗憾~ 来晚了一步，下次记得早点来哦</string>
    <string name="commend">点赞</string>
    <string name="copy">复制</string>
    <string name="reply">回复</string>
    <string name="report">举报</string>
    <string name="more_prompt">查看更多</string>
    <string name="release_prompt">释放查看</string>
    <string name="search_prompt">搜索更多好书</string>
    <string name="setting_network">设置网络</string>
    <string name="create_literature_section">新建章节</string>
    <string name="literature_list_empty_prompt">还没有创建过作品</string>
    <string name="zero">0</string>
    <string name="recommend_for_you">为您推荐</string>
    <string name="recommend_according_to_your_interest">根据你的兴趣推荐一下作品</string>
    <string name="recommend_prompt">志趣不投，点我试试</string>
    <string name="user_name_hint">叫个什么呢</string>
    <string name="author_say_something">作者有话说</string>
    <string name="newest_comment">最新热评</string>
    <string name="unit_billion">亿+</string>
    <string name="book_author">本书作者</string>
</resources>