<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/comment_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/color_black_191919"
        android:textSize="@dimen/text_size_26"
        tools:text="@string/default_name" />

    <TextView
        android:id="@+id/comment_author_mark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/comment_user_name"
        android:layout_alignTop="@id/comment_user_name"
        android:layout_marginBottom="@dimen/height_0.5"
        android:layout_marginLeft="@dimen/width_6"
        android:layout_marginStart="@dimen/width_6"
        android:layout_marginTop="@dimen/height_0.5"
        android:layout_toEndOf="@id/comment_user_name"
        android:layout_toRightOf="@id/comment_user_name"
        android:contentDescription="@string/app_name"
        android:text="@string/book_author"
        android:textSize="@dimen/text_size_22"
        android:textColor="@color/color_white"
        android:background="@drawable/icon_author_mark" />
</RelativeLayout>