<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_communal">

    <include
        android:id="@+id/wifi_transport_head"
        layout="@layout/layout_view_common_head"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_98"
        android:layout_alignParentTop="true" />

    <ImageView
        android:id="@+id/wifi_transport_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wifi_transport_head"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/height_40"
        android:layout_marginTop="@dimen/height_150"
        android:contentDescription="@string/app_name"
        android:src="@drawable/icon_wifi_transport_image" />

    <TextView
        android:id="@+id/wifi_transport_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wifi_transport_image"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/height_32"
        android:text="@string/wifi_transport_prompt"
        android:textColor="@color/color_black_191919"
        android:textSize="@dimen/text_size_30" />

    <TextView
        android:id="@+id/wifi_transport_address"
        android:layout_width="@dimen/width_522"
        android:layout_height="wrap_content"
        android:background="@drawable/icon_wifi_transport_address"
        android:gravity="center"
        android:paddingBottom="@dimen/height_16"
        android:paddingLeft="@dimen/width_32"
        android:paddingRight="@dimen/width_32"
        android:paddingTop="@dimen/height_16"
        android:text="@string/wifi_transport_address_empty"
        android:textColor="@color/theme_primary"
        android:textSize="@dimen/text_size_34"
        android:layout_below="@+id/wifi_transport_prompt"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/wifi_transport_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wifi_transport_address"
        android:layout_marginLeft="@dimen/width_60"
        android:layout_marginRight="@dimen/width_60"
        android:layout_marginTop="@dimen/height_32"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/line_spacing_extra_4"
        android:textColor="@color/color_black_191919"
        android:textSize="@dimen/text_size_28"
        android:visibility="gone"
        tools:text="@string/default_message" />

    <TextView
        android:id="@+id/wifi_transport_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wifi_transport_name"
        android:layout_marginBottom="@dimen/height_60"
        android:layout_marginLeft="@dimen/width_60"
        android:layout_marginRight="@dimen/width_60"
        android:layout_marginTop="@dimen/height_4"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/line_spacing_extra_4"
        android:text="@string/wifi_transport_message_prompt"
        android:textColor="@color/color_black_191919"
        android:textSize="@dimen/text_size_28" />

    <TextView
        android:id="@+id/wifi_transport_result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wifi_transport_message"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/width_10"
        android:layout_marginRight="@dimen/width_10"
        android:layout_marginTop="@dimen/height_60"
        android:textSize="@dimen/text_size_34"
        tools:text="@string/default_name" />

</RelativeLayout>