<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/about_back"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_98"
            android:contentDescription="@string/app_name"
            android:paddingLeft="@dimen/width_32"
            android:paddingRight="@dimen/width_32"
            android:src="@drawable/icon_back" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/height_80"
            android:layout_marginTop="@dimen/height_112"
            android:contentDescription="@string/app_name"
            android:src="@drawable/icon_logo" />

        <TextView
            android:id="@+id/about_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="@dimen/height_34"
            android:text="@string/version"
            android:textColor="@color/color_gray_686868"
            android:textSize="@dimen/text_size_28" />

        <TextView
            android:id="@+id/about_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="@dimen/height_34"
            android:text="@string/company_email"
            android:textColor="@color/color_gray_686868"
            android:textSize="@dimen/text_size_28" />

        <TextView
            android:id="@+id/about_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="@dimen/height_34"
            android:text="@string/company_chart_account_number"
            android:textColor="@color/color_gray_686868"
            android:textSize="@dimen/text_size_28" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name"
            android:src="@drawable/icon_qr_code" />
    </LinearLayout>
</ScrollView>