<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/width_500"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/background_custom_dialog"
    android:orientation="vertical">

    <TextView
        android:id="@+id/communal_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/height_40"
        android:layout_marginLeft="@dimen/width_32"
        android:layout_marginRight="@dimen/width_32"
        android:layout_marginTop="@dimen/height_40"
        android:gravity="center"
        android:textColor="@color/color_black_030303"
        android:textSize="@dimen/text_size_24"
        tools:text="@string/default_message" />

    <include layout="@layout/layout_view_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_68"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/communal_option_first"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/theme_primary"
            android:textSize="@dimen/text_size_24" />

        <include
            layout="@layout/layout_view_divider"
            android:layout_width="@dimen/width_1"
            android:layout_height="@dimen/height_44"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/communal_option_second"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/delete"
            android:textColor="@color/color_red_f44336"
            android:textSize="@dimen/text_size_24" />
    </LinearLayout>
</LinearLayout>