<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_88"
        android:layout_marginLeft="@dimen/width_32"
        android:layout_marginRight="@dimen/width_32"
        android:layout_marginTop="@dimen/height_10">

        <ImageView
            android:id="@+id/modify_qq_clear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:paddingLeft="@dimen/width_10"
            android:paddingRight="@dimen/width_10"
            android:src="@drawable/icon_delete"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/modify_qq_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/modify_qq_clear"
            android:layout_toStartOf="@id/modify_qq_clear"
            android:background="@null"
            android:hint="@string/input_qq"
            android:inputType="number"
            android:maxEms="11"
            android:maxLength="11"
            android:maxLines="1"
            android:textColor="@color/color_black_191919"
            android:textColorHint="@color/color_gray_9b9b9b"
            android:textSize="@dimen/text_size_30" />

    </RelativeLayout>

    <include layout="@layout/layout_view_divider" />

    <TextView
        android:id="@+id/modify_qq_complete"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_88"
        android:layout_marginBottom="@dimen/height_40"
        android:layout_marginLeft="@dimen/width_32"
        android:layout_marginRight="@dimen/width_32"
        android:layout_marginTop="@dimen/height_40"
        android:background="@drawable/icon_button_background"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/selector_user_button_text"
        android:textSize="@dimen/text_size_36" />
</LinearLayout>